--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <div class="first-section">
+    <main class="first-section">
         <div class="second-section">
             <div class="text-container">
                 <img src="assets/images/image-qr-code.png" alt="image-qr-code">
@@ -22,7 +22,7 @@
                 <p>scan the QR code to visit frontend <br> mentor and take your coding skills to <br> the next level</p>
             </div>
         </div>
-    </div>
+    </main>
 
 </body>
 
